...
          <Text testID="home-total-balance-fiat" className={`text-center text-lg font-medium ${theme.textSecondary}`}>
            {hideBalance ? t('walletOverview.hiddenBalance') : `${convertedVal.toLocaleString('en-US', { maximumFractionDigits: 2 })} ${selectedFiatCurrency}`}
          </Text>
        </View>
      </View>
      <View className="flex flex-row justify-around space-x-1">
        <ActionButton icon="arrow-up-outline" color="white" bgClass="bg-primary-600" label={t('walletOverview.send')} onPress={() => sendModalRef.current?.present()} testID="home-send-button" />
        <ActionButton icon="add" color="white" bgClass="bg-primary-600" label={t('walletOverview.receive')} onPress={() => receiveModalRef.current?.present()} testID="home-receive-button" />
        <ActionButton icon="scan" color="white" bgClass="bg-neutral-700" label={t('walletOverview.scanQr')} onPress={() => router.push('/scan-qr')} testID="home-scan-button" />
      </View>
      <PaymentMethodBottomSheet ref={sendModalRef} mode="send" onSelect={handleSendSelect} />
      <PaymentMethodBottomSheet ref={receiveModalRef} mode="receive" onSelect={handleReceiveSelect} />
    </View>
  );
};
...
