...
  const scanQRCode = async () => {
    router.push('/scan-qr');
  };

  return (
    <SafeAreaProvider>
      <SafeAreaView testID="send-onchain-address-screen" className="flex-1 bg-white dark:bg-charcoal-950">
        <Stack.Screen
          options={{
            headerTitle: () => LightningPaymentScreenHeaderTitle(t('onchainSend.enterAddress.title')),
            headerTitleAlign: 'center',
            headerLeft: HeaderLeft,
            headerShadowVisible: false,
...
        />
        <FocusAwareStatusBar />
        <ScrollView className="flex-1 px-4 pt-8">
          <View className="mb-2">
            <View className="relative">
              <Input
                testID="send-onchain-address-input"
                value={addressInput}
                onChangeText={setAddressInput}
                placeholder={t('onchainSend.enterAddress.placeholder')}
                suffix={
                  <View className="flex flex-row">
                    <Ionicons testID="send-onchain-address-scan" name="scan" size={24} color={colors.primary[600]} className="mr-4" onPress={scanQRCode} />
...
              />
            </View>
          </View>
          {isLoading && <ActivityIndicator size="small" color={colors.primary[600]} />}
          <View>
            <Button
              testID="send-onchain-address-continue"
              label={t('onchainSend.enterAddress.continueButton')}
              disabled={isLoading}
              onPress={handlePayment}
              fullWidth={true}
              variant="secondary"
              textClassName="text-base font-bold text-white"
...
